--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
-.heading{
+.heading {
   font-size: 24px;
   color: #40454a;
   font-weight: 500;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 480px) {
+  .heading {
+    text-align: center;
+  }
 }
