--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -1,9 +1,16 @@
 .form {
-  height: 600px;
+  height: 300px;
   width: 350px;
   flex: 0.3;
   display: flex;
   flex-direction: column;
   padding: 20px;
   gap: 15px;
+}
+
+@media screen and (max-width: 480px) {
+  .form {
+    width: 90%;
+    height: 100%;
+  }
 }
