--- a/src/components/JobCard/jobCard.css
+++ b/src/components/JobCard/jobCard.css
@@ -1,36 +1,34 @@
-
 .jobCard {
-    margin-bottom: 20px;
-    height: 120px;
-    padding: 15px;
-    position: relative;
-  }
-  .jobCard-icons {
-    /* position: absolute; */
-    right: 3px;
-    bottom: 3px;
-  }
-  .jobCard-details {
+  margin-bottom: 20px;
+  padding: 15px;
+  position: relative;
+}
+.jobCard-icons {
+  right: 3px;
+  bottom: 3px;
+}
+.jobCard-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.jobCard-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  justify-items: flex-end;
+}
+.jobCard-footer-date {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+@media screen and (max-width: 480px) {
+  .jobCard-footer-date {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    margin-top: 10px;
+    font-size: 12px;
   }
-  
-  .jobCard-details > p {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    /* padding-bottom: 15px; */
-    max-height: 48px;
-  }
-  .jobCard-footer {
-    /* position: absolute;
-    bottom: 3px; */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    justify-items: flex-end;
-  }
-  
+}
